# Design-Patterns

./: .gitignore  CMakeLists.txt  DivisionsControlButtons.qml  Editor.qml  EditorBottomBar.qml  EditorMenu.qml  EditorMenuButton.qml  FileDownloader.qml  IndustryStructure.qml  InputField.qml  LoginPopup.qml  MainPage.qml  ProgressPopup.qml  Rect.qml  Timetable.qml  TimetableDelegate.qml  TopBar.qml  authcontroller.cpp  authcontroller.h  downloadcontroller.cpp  downloadcontroller.h  filedownloader.cpp  filedownloader.h  filesaver.cpp  filesaver.h  main.cpp  main.qml  qml.qrc  threadpool.cpp  threadpool.h  user.h  usercontroller.cpp  usercontroller.h
headers/: boardstate.h  circle.h  division.h  divisioncontroller.h  divisionmodel.h  downloadcontroller.h  downloadworker.h  figurecontroller.h  figurefactory.h  figuretype.h  filedownloader.h  history.h  job.h  movable.h  point.h  rectangle.h  saver.h  threadpool.h  triangle.h  user.h  workqueue.h
src/: boardstate.cpp  circle.cpp  division.cpp  divisioncontroller.cpp  divisionmodel.cpp  downloadcontroller.cpp  downloadworker.cpp  figurecontroller.cpp  figurefactory.cpp  figuretype.cpp  filedownloader.cpp  filesaver.cpp  history.cpp  job.cpp  main.cpp  point.cpp  rectangle.cpp  saver.cpp  threadpool.cpp  triangle.cpp  usercontroller.cpp
